fix z-index

--- a/client/src/containers/navbar/navBar.scss
+++ b/client/src/containers/navbar/navBar.scss
@@ -35,14 +35,16 @@ header {
         justify-content: space-between;
         align-items: center;
         padding: 0 $navbar-padding;
+        z-index: 2;
 
         .navbar-branding {
             font-size: $navbar-brand-font-size;
-            z-index: 1;
+            z-index: 2;
         }
 
         .navbar-menu.active {
             top: 70px;
+            z-index: 1;
         }
 
         .navbar-menu {
@@ -82,7 +84,7 @@ header {
             display: none;
             font-size: $navbar-brand-font-size;
             cursor: pointer;
-            z-index: 1;
+            z-index: 2;
 
             @include tablet {
                 display: block;
