--- a/client/src/containers/registerForm/registerForm.scss
+++ b/client/src/containers/registerForm/registerForm.scss
@@ -25,7 +25,6 @@ $form-header-text-font: 1.5rem;
         box-shadow: 0 0 10px black;
         border-radius: 5px;
         overflow: hidden;
-        z-index: -1;
 
         @include tablet {
             min-width: calc(#{$form-min-width} - 150px);
